Changelog
=========

2019.4.0rc4 (unreleased)
------------------------

- Nothing changed yet.


2019.4.0rc3 (2019-10-02)
------------------------

- Add new reminder type ReminderOnDate (backend only). [lgraf]
- Fix an issue with agenda item template ids not being stored as ascii. [deiferni]
- Bump ftw.bumblebee to 3.8.0 for p7m support. [deiferni]
- Add support for multipart/signed a.k.a. *.p7m mails. [deiferni]
- Add documentation for the cancelcheckout endpoint. [njohner]
- Downgrade solr to 7.3.1.
- Bump plone.restapi to 4.5.1. [phgross]
- Use persistent-mapping for recently touched entries. [phgross]
- Harmonize datetimes in recently-touched endpoint. [phgross]
- Set proposal plone workflow state when submitted proposal state changes. Refactor remote calls so that there is only one request per state change. [deiferni]
- Render discreet workflow transition buttons and show warning/info messages on proposal overview when proposal document is checked out or committee has been deactivated.
- Bump ftw.solr to 2.7.0 to get console scripts for maintenance tasks. [deiferni]
- Validate task deadline modification through the rest-api if the user uses the same deadline as already set on the task. [elioschmutz]
- Bump ftw.solr to 2.6.2 to get fix for avoiding atomic updates with null-documents. [lgraf]
- Add example contentent for workspaces. [elioschmutz]
- Bump docxcompose to version 1.0.2. [njohner]
- Bump ftw.zipexport to include a bugfix to avoid doubled subfolders. [phgross]
- Change task specific response implementation to the new base response implementation. [elioschmutz]
- Handle creation of new proposals over the REST-API. [njohner]
- Introduce plone proposal workflow, provide api support for proposal workflow transitions. [deiferni]
- Always raise when viewlet rendering errors occur during development. [deiferni]
- Rename label and values of the privacy layer field. [phgross]